# ernest_simulations

./: README.md
PID_controller/: CMakeLists.txt  setup.cfg  setup.py
PID_controller/matlab/: steering_angles.txt
PID_controller/src/: PID.cpp  path_tracking_mpc.py
bringup/: CMakeLists.txt  package.xml
bringup/config/: blended_controller_config.yaml  effort_controller_config.yaml  joint_controller_config.yaml  joint_test_config.yaml  position_controller_config.yaml
bringup/launch/: blended.launch.py  effort.launch.py  ernest_gazebo.launch.py  joint_controller.launch.py  position.launch.py  test.launch.py
bringup/src/: odom_to_tf.cpp  plot_path.cpp
controller/: CMakeLists.txt  package.xml
controller/launch/: mpc_launch.py
controller/matlab/: speed.txt  steering_angles.txt  traj_gen.m
controller/models/: Ackermann_steering.py
controller/nodes/: MPC_node.py
controller/src/: backup.cpp  joint_traj_controller.cpp  path_tracking_mpc.py  prova.cpp  subs.cpp  trajectory_controller.cpp
description/: CMakeLists.txt  package.xml
description/launch/: view_ernest.launch.py
description/meshes/: bogie_link.STL  chassis.dae  front_left_steer.STL  front_left_steer.dae  front_right_steer.STL  front_right_steer.dae  front_right_wheel.dae  pivot.dae  rear_left_wheel.STL  rear_left_wheel.dae  rear_right_wheel.dae
description/urdf/: blended_controller.xacro  effort_controller.xacro  effort_joint.xacro  ernest.urdf.xacro  ernest_control.xacro  ernest_gazebo.xacro  ernest_system.urdf.xacro  joint_test.xacro  joint_traj_controller.xacro  materials.xacro  position_controller.xacro  robot_core.urdf.xacro
description/worlds/: copy.sdf  empty.sdf  moon.sdf  moon.world  rugged.sdf
ernest_bringup/: CMakeLists.txt  package.xml
ernest_bringup/config/: diff_drive_controller_config.yaml  joint_controller_config.yaml
ernest_bringup/launch/: diff_drive.launch.py  ernest_gazebo.launch.py  joint_controller.launch.py
ernest_controller/: CMakeLists.txt  ernest_plugin.xml  package.xml
ernest_controller/config/: ernest_controller_config.yaml
ernest_controller/include/ernest_controller/: ernest_controller.hpp  odometry.hpp  rolling_mean_accumulator.hpp  speed_limiter.hpp  visibility_control.h
ernest_controller/launch/: ernest_controller.launch.py
ernest_controller/matlab/: README.md  prova.txt
ernest_controller/src/: backup.cpp  ernest_controller.cpp  joint_traj_controller.cpp  odometry.cpp  speed_limiter.cpp
ernest_controller/test/: test_accumulator.cpp  test_common.hpp  test_ernest_controller.cpp  test_load_ernest_controller.cpp
ernest_controller/test/config/: test_ernest_controller.yaml
ernest_description/: CMakeLists.txt  package.xml
ernest_description/config/: diff_drive_controller_config.yaml  first_controller_config.yaml  spawn_bot.rviz
ernest_description/gazebo/: ernest_gazebo.xacro
ernest_description/launch/: ackermann.launch.py  diff_drive.launch.py  launch_robot.launch.py  rsp.launch.py  view_ernest.launch.py
ernest_description/meshes/: bogie.STL  pivot.STL  rear_left_steer.dae
ernest_description/models/meshes/: bogie.dae  chassis.STL  front_left_wheel.STL  front_left_wheel.dae  front_right_wheel.STL  rear_left_steer.STL  rear_right_steer.STL  rear_right_steer.dae  rear_right_wheel.STL
ernest_description/urdf/: diff_drive_control.xacro  ernest.urdf.xacro  ernest.xacro  ernest_gazebo.xacro  ernest_system.urdf.xacro  joint_traj_controller.xacro  position_control.xacro  robot_core.urdf.xacro  robot_core.xacro  ros2_control.xacro  rr.xacro
ernest_mpc/: CMakeLists.txt
ernest_mpc/src/: straight_line.cpp  track.cpp
gazebo_ros2_control/src/: gazebo_system.cpp
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
log/: latest_build
mpc_controller/: README.md  setup.cfg  setup.py
mpc_controller/launch/: blended_controller.launch.py  controller.launch.py  effort_controller.launch.py  sensor_test.launch.py
mpc_controller/mpc_controller/: ackermann_kinematics.py  data.py  demo.py  full_pivot_4ws_kinematics.py  fws_kinematics.py  mpc_node.py  mpc_node_blended.py  mpc_node_carexample.py  mpc_node_old.py  mpc_node_position.py  new_pivot_4ws_kinematics.py  path_tracking_mpc.py  path_tracking_mpc_node.py  pid_node.py  pivot_4ws_kinematics.py  pivot_kinematics.py  pivot_kinematics_new_approach.py  sensors_node.py  stop_motors.py  sym_fws_kinematics.py  test_actuators.py  utils.py
mpc_controller/mpc_controller/models/: ackermann_kinematics.py  fws_kinematics.py  pivot_4ws_kinematics.py  pivot_kinematics.py  pivot_kinematics_new_approach.py  sym_fws_kinematics.py
mpc_controller/path/: new_path.txt  s_shape_path.txt  step_path.txt
mpc_controller/results/: steer_torque.txt  wheel_torque.txt
mpc_controller/results/4ws/: input.txt  input_bicycle.txt  prediction.txt  reference.txt  state.txt  steer_effort.txt  steer_torque.txt  time_step.txt  wheel_effort.txt  wheel_torque.txt
mpc_controller/results/4ws_pivot/: input.txt  prediction.txt  reference.txt  state.txt  steer_effort.txt  steer_torque.txt  time_step.txt  (+2 more)
mpc_controller/src/: main.py
pid_controller/: CMakeLists.txt  README.md  package.xml  setup.cfg  setup.py
pid_controller/matlab/: README.md  speed.txt
pid_controller/src/: position_controller.cpp  simulation_code.py  trajectory_controller.cpp
sensors_testing/: README.md  package.xml  setup.cfg  setup.py
sensors_testing/results/: steer_torque.txt  wheel_torque.txt
sensors_testing/sensors_testing/: sensors_node.py  stop_motors.py  test_actuators.py
torque_sensing/: package.xml  setup.cfg  setup.py
torque_sensing/torque_sensing/: test_actuators.py  torque_node.py
(+229 files in other folders)
